objects/MobilePaks__VeeloAssignment__c.object
<CustomObject>
    <fields>
        <fullName>MobilePaks__AssignedDate__c</fullName>
        <label>Assigned Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MobilePaks__CompletedCount__c</fullName>
        <label>Completed Paks and Files</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobilePaks__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MobilePaks__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MobilePaks__PaksAndFiles__c</fullName>
        <label>Total Paks and Files</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobilePaks__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Veelo_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobilePaks__VeeloCollection__c</fullName>
        <label>Veelo Collection</label>
        <referenceTo>MobilePaks__VeeloCollection__c</referenceTo>
        <relationshipLabel>Veelo Assignments</relationshipLabel>
        <relationshipName>Veelo_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MobilePaks__VeeloID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Veelo ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Veelo Assignment</label>
    <nameField>
        <label>Veelo Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veelo Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>